--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if(pos==strText.length)
 return;
 }
 }
-var strText = "(｡･∀･)ﾉﾞ嗨！\n 现在是北京时间  21：00 PM 你知道吗·，在当初刚遇见你的时候就有一种砰然心动的感觉，之后总会情不自禁的去靠近你。每当我上教室的时候总会望向门口，期盼着你的出现，原以为会是昙花一现 后来我就知道是玫瑰花开。\n我应该摈弃曾经，是的 即便刚开学那会儿发生了许多事情，但那仅是曾经，伟人说过：“过去从来都不是衡量一个人的标准。” \n  我知道我不够合格，但我只想尝试着去努力一下，为了爱你，我学着温柔，把一些情话慢慢熬，尽管我还是想抱着你，或者跳起来吻你。\n  你是非常可爱的人，真应该遇到最好的人，我也真希望我就是 那么，我可以喜欢你吗？\n \n#include <stdio.h>\nint main<void>\n{\nprintf('you is my only girl');\nif (chosee = true)\n{\nprintf ('you are my girl');\n}\nreturn 0;\n}\n写尽千山落笔是你，望尽星辰美丽是你，书尽泛黄扉页是你，千山万水白处是你，铁马是你冰河也是你。\n只要你愿意，当你失落失意的时候，最需要一个肩膀的时候，告诉我，我会立即出现。 \n2022.12.21"
+var strText = "(｡･∀･)ﾉﾞ嗨！\n 现在是北京时间  21：00 PM 你知道吗·，在当初刚遇见你的时候？\n \n#include <stdio.h>\nint main<void>\n{\nprintf('you is my only girl');\nif (chosee = true)\n{\nprintf ('you are my girl');\n}\nreturn 0;\n}\n写尽千山落笔是你，望尽星辰美丽是你，书尽泛黄扉页是你，千山万水白处是你，铁马是你冰河也是你。\n \n2022.12.21"
 ShowText(strText);
 </SCRIPT>
 </FORM>
