--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>System load
   <p>username:xys
-<HTML><HEAD><TITLE>Rockcy AND You NL</TITLE>
+<HTML><HEAD><TITLE>Rockcy EMAL SYSTEM</TITLE>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="Content-Type" content="text/html"; charset="utf-8"/>
@@ -122,7 +122,7 @@ if(pos==strText.length)
 return;
 }
 }
-var strText = "(｡･∀･)ﾉﾞ嗨！\n 现在是北京时间  21：00 PM 你知道吗·，在当初刚遇见你的时候？\n \n#include <stdio.h>\nint main<void>\n{\nprintf('you is my only girl');\nif (chosee = true)\n{\nprintf ('you are my girl');\n}\nreturn 0;\n}\n写尽千山落笔是你，望尽星辰美丽是你，书尽泛黄扉页是你，千山万水白处是你，铁马是你冰河也是你。\n \n2022.12.21"
+var strText = "(｡･∀･)ﾉﾞ嗨！\n 现在是北京时间  21：00 PM 你知道吗·，在当初刚遇见你的时候？\n [内容删除]\n#include <stdio.h>\nint main<void>\n{\nprintf('you is my only girl');\nif (chosee = true)\n{\nprintf ('you are my girl');\n}\nreturn 0;\n}\n写尽千山落笔是你，望尽星辰美丽是你，书尽泛黄扉页是你，千山万水白处是你，铁马是你冰河也是你。\n \n2022.12.21"
 ShowText(strText);
 </SCRIPT>
 </FORM>
