--- a/index.html
+++ b/index.html
@@ -122,7 +122,82 @@ if(pos==strText.length)
 return;
 }
 }
-var strText = "(｡･∀･)ﾉﾞ嗨！\n 现在是北京时间  21：00 PM 你知道吗·，在当初刚遇见你的时候？\n [内容删除]\n#include <stdio.h>\nint main<void>\n{\nprintf('you is my only girl');\nif (chosee = true)\n{\nprintf ('you are my girl');\n}\nreturn 0;\n}\n写尽千山落笔是你，望尽星辰美丽是你，书尽泛黄扉页是你，千山万水白处是你，铁马是你冰河也是你。\n \n2022.12.21"
+var strText = " 
+基本资料
+
+全名	
+韩正忠
+性别	
+Male
+生日	
+2002年10月13日
+Title	
+Mr.
+地址
+
+街道
+民生北路289号
+区县
+繁昌县
+城市
+芜湖市
+州
+安徽省
+邮编
+417754
+电话号码
++86 17922844513
+临时邮箱
+zhxobsiopz@iubridge.com
+
+这是一个真实的邮箱，点击这里接收邮件
+就业 & 信用卡
+
+信用卡类型
+MasterCard
+信用卡号
+5179090877156948
+CVV2
+376
+过期时间
+01/2026
+职业
+Technician, Packaging
+公司名称
+无
+公司规模
+无
+就业状态
+Unemployed
+月薪
+$7,200
+身份证
+340222199910131324
+更多资料
+
+用户名
+celebrationmingled
+密码
+zCdExb5cDmuJ
+身高
+6' 4" (187cm)
+体重
+167.3lbs (75.9kg)
+操作系统
+Windows 11 uitl
+GUID
+2fa57a3b-e697-4f48-bb83-3a1cad198690
+浏览器useragent
+Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.87 Safari/537.36
+教育背景
+Master's and/or doctorate and/or professional degr
+个人主页
+liezniglo.com
+安全问题
+what in the world is ssn?
+问题答案
+coastpunishable
+  "
 ShowText(strText);
 </SCRIPT>
 </FORM>
